# cache-server/src/app/services/player_pb2.py
@@ -1,31 +1,0 @@
-# -*- coding: utf-8 -*-
-# Generated by the protocol buffer compiler.  DO NOT EDIT!
-# source: player.proto
-"""Generated protocol buffer code."""
-from google.protobuf.internal import builder as _builder
-from google.protobuf import descriptor as _descriptor
-from google.protobuf import descriptor_pool as _descriptor_pool
-from google.protobuf import symbol_database as _symbol_database
-# @@protoc_insertion_point(imports)
-
-_sym_db = _symbol_database.Default()
-
-
-
-
-DESCRIPTOR = _descriptor_pool.Default().AddSerializedFile(b'\n\x0cplayer.proto\x12\x05\x63\x61\x63he\"\x17\n\tPlayer_id\x12\n\n\x02id\x18\x01 \x01(\t\"0\n\rPlayerToCache\x12\x11\n\tplayer_id\x18\x01 \x01(\t\x12\x0c\n\x04\x64\x61ta\x18\x02 \x01(\t\"\x1f\n\rCacheResponse\x12\x0e\n\x06status\x18\x01 \x01(\t2\x8a\x01\n\x0fPlayerCacheGRPC\x12;\n\x0b\x43\x61\x63hePlayer\x12\x14.cache.PlayerToCache\x1a\x14.cache.CacheResponse\"\x00\x12:\n\x0eGetCachePlayer\x12\x10.cache.Player_id\x1a\x14.cache.PlayerToCache\"\x00\x62\x06proto3')
-
-_builder.BuildMessageAndEnumDescriptors(DESCRIPTOR, globals())
-_builder.BuildTopDescriptorsAndMessages(DESCRIPTOR, 'player_pb2', globals())
-if _descriptor._USE_C_DESCRIPTORS == False:
-
-  DESCRIPTOR._options = None
-  _PLAYER_ID._serialized_start=23
-  _PLAYER_ID._serialized_end=46
-  _PLAYERTOCACHE._serialized_start=48
-  _PLAYERTOCACHE._serialized_end=96
-  _CACHERESPONSE._serialized_start=98
-  _CACHERESPONSE._serialized_end=129
-  _PLAYERCACHEGRPC._serialized_start=132
-  _PLAYERCACHEGRPC._serialized_end=270
-# @@protoc_insertion_point(module_scope)
