# player-cache-server/src/app/domain/player.py
@@ -10,10 +10,10 @@ if TYPE_CHECKING:
 @dataclass
 class Player:
     player_id: str = field(default_factory=lambda: str(uuid.uuid4()))
-    player_map: str = field(default_factory=lambda: "567f5741-0862-4dd6-a442-3d8f819a9dd5")
-    player_name: str = "test player"
-    player_viewport_x: int = 1
-    player_viewport_y: int = 1
+    current_map: str = field(default_factory=lambda: "567f5741-0862-4dd6-a442-3d8f819a9dd5")
+    name: str = ""
+    hp: int = 1
+    ac: int = 1
     
 
     def set(self, player_repository: "PlayerRepository"):
