# player-server/src/app/protos/player_pb2.py
@@ -1,0 +1,31 @@
+# -*- coding: utf-8 -*-
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# source: protos/player.proto
+"""Generated protocol buffer code."""
+from google.protobuf.internal import builder as _builder
+from google.protobuf import descriptor as _descriptor
+from google.protobuf import descriptor_pool as _descriptor_pool
+from google.protobuf import symbol_database as _symbol_database
+# @@protoc_insertion_point(imports)
+
+_sym_db = _symbol_database.Default()
+
+
+
+
+DESCRIPTOR = _descriptor_pool.Default().AddSerializedFile(b'\n\x13protos/player.proto\x12\x05\x63\x61\x63he\"\x17\n\tPlayer_id\x12\n\n\x02id\x18\x01 \x01(\t\"Z\n\nPlayerGrpc\x12\x11\n\tplayer_id\x18\x01 \x01(\t\x12\x0c\n\x04name\x18\x02 \x01(\t\x12\n\n\x02hp\x18\x03 \x01(\x05\x12\n\n\x02\x61\x63\x18\x04 \x01(\x05\x12\x13\n\x0b\x63urrent_map\x18\x05 \x01(\t\"\x1f\n\rCacheResponse\x12\x0e\n\x06status\x18\x01 \x01(\t2\x80\x01\n\x0fPlayerCacheGRPC\x12\x39\n\x0cupdatePlayer\x12\x11.cache.PlayerGrpc\x1a\x14.cache.CacheResponse\"\x00\x12\x32\n\tgetPlayer\x12\x10.cache.Player_id\x1a\x11.cache.PlayerGrpc\"\x00\x62\x06proto3')
+
+_builder.BuildMessageAndEnumDescriptors(DESCRIPTOR, globals())
+_builder.BuildTopDescriptorsAndMessages(DESCRIPTOR, 'protos.player_pb2', globals())
+if _descriptor._USE_C_DESCRIPTORS == False:
+
+  DESCRIPTOR._options = None
+  _PLAYER_ID._serialized_start=30
+  _PLAYER_ID._serialized_end=53
+  _PLAYERGRPC._serialized_start=55
+  _PLAYERGRPC._serialized_end=145
+  _CACHERESPONSE._serialized_start=147
+  _CACHERESPONSE._serialized_end=178
+  _PLAYERCACHEGRPC._serialized_start=181
+  _PLAYERCACHEGRPC._serialized_end=309
+# @@protoc_insertion_point(module_scope)
